# shenanigans

./: .bettercodehub.yml  .clang-format  .clang-tidy  .clangd  .cppcheck-includes  .cppcheck-suppressions  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  .ruff.toml  CMakeLists.txt  CPPLINT.cfg  README.md  TODO.md  Zdeny_PhD_Shenanigans.sln  build.py  cppcheck_report.txt  requirements.txt  setup.py  sonar-project.properties  test.py
.github/dormant/: build-gcc.yml  sanitizer-undefined.yml  test-clang.yml  test-gcc.yml
.github/later/: clang-tidy.yml
Zdeny_PhD_Shenanigans/: .clang-format  CMakeLists.txt  FITS.cpp  FITS.h  IPC.cpp  IPC.h  WindowDiffrot.cpp  WindowDiffrot.h  WindowDiffrot.ui  WindowIPC2PicAlign.cpp  WindowIPC2PicAlign.h  WindowIPC2PicAlign.ui  WindowIPCoptimize.cpp  WindowIPCoptimize.h  WindowIPCoptimize.ui  WindowIPCparameters.cpp  WindowIPCparameters.h  WindowIPCparameters.ui  WindowPlot.h  WindowPlot.ui  WindowTemplate.h  WindowTemplate.ui  Zdeny_PhD_Shenanigans.cpp  Zdeny_PhD_Shenanigans.h  Zdeny_PhD_Shenanigans.ui  Zdeny_PhD_Shenanigans.vcxproj  Zdeny_PhD_Shenanigans.vcxproj.filters  constants.h  csllogger.h  filtering.cpp  filtering.h  fourier.cpp  fourier.h  fractal.cpp  fractal.h  functionsAstro.cpp  functionsAstro.h  functionsBaseCV.cpp  functionsBaseCV.h  functionsBaseSTL.cpp  (+18 more)
Zdeny_PhD_Shenanigans/Astrophysics/: FITS.cpp  FITS.h  SDOipcOpt.cpp  SDOipcOpt.h  SwindFlow.h  diffrot.cpp  diffrot.h  diffrotFileIO.h  diffrotResults.cpp  diffrotResults.h  functionsAstro.cpp  functionsAstro.h
Zdeny_PhD_Shenanigans/Complexity/: ComplexityClassEstimation.h
Zdeny_PhD_Shenanigans/Core/: BlazeUtils.h  constants.h  export.h  functionsBaseCV.cpp  functionsBaseCV.h  functionsBaseSTL.cpp  functionsBaseSTL.h  globals.h  macros.h
Zdeny_PhD_Shenanigans/DebugStuff/: DebugStuff.h
Zdeny_PhD_Shenanigans/Draw/: colormap.h  combinepics.h  crop.h  draw.h  showsave.h
Zdeny_PhD_Shenanigans/Features/: FeatureMatch.h
Zdeny_PhD_Shenanigans/Filtering/: HistogramEqualization.h  filtering.cpp  filtering.h
Zdeny_PhD_Shenanigans/Fit/: nnfit.h  polyfit.h  trigfit.h
Zdeny_PhD_Shenanigans/Fourier/: fourier.cpp  fourier.h
Zdeny_PhD_Shenanigans/Fractal/: fractal.cpp  fractal.h
Zdeny_PhD_Shenanigans/Gui/: WindowDiffrot.cpp  WindowDiffrot.h  WindowDiffrot.ui  WindowIPC2PicAlign.cpp  WindowIPC2PicAlign.ui  WindowIPCoptimize.cpp  WindowIPCparameters.cpp  WindowIPCparameters.ui  WindowPlot.cpp  WindowPlot.h  WindowPlot.ui  WindowTemplate.cpp  Zdeny_PhD_Shenanigans.cpp  Zdeny_PhD_Shenanigans.h  Zdeny_PhD_Shenanigans.ui
Zdeny_PhD_Shenanigans/Gui/Main/: Zdeny_PhD_Shenanigans.cpp  Zdeny_PhD_Shenanigans.h  Zdeny_PhD_Shenanigans.ui
Zdeny_PhD_Shenanigans/Gui/Windows/: WindowDiffrot.cpp  WindowDiffrot.h  WindowDiffrot.ui  WindowIPC2PicAlign.cpp  WindowIPC2PicAlign.h  WindowIPC2PicAlign.ui  WindowIPCoptimize.cpp  WindowIPCoptimize.ui  WindowIPCparameters.h  WindowPlot.cpp  WindowPlot.h
Zdeny_PhD_Shenanigans/Gui/Windows/Diffrot/: WindowDiffrot.cpp  WindowDiffrot.h  WindowDiffrot.ui
Zdeny_PhD_Shenanigans/Gui/Windows/FITS/: WindowFITS.cpp  WindowFITS.h  WindowFITS.ui
Zdeny_PhD_Shenanigans/Gui/Windows/Features/: WindowFeatures.cpp  WindowFeatures.h  WindowFeatures.ui
Zdeny_PhD_Shenanigans/Gui/Windows/Filtering/: WindowFiltering.cpp  WindowFiltering.h  WindowFiltering.ui
Zdeny_PhD_Shenanigans/Gui/Windows/IPC/: WindowIPC.cpp  WindowIPC.h  WindowIPC.ui
Zdeny_PhD_Shenanigans/Gui/Windows/IPC2PicAlign/: WindowIPC2PicAlign.cpp  WindowIPC2PicAlign.ui
Zdeny_PhD_Shenanigans/Gui/Windows/IPCoptimize/: WindowIPCoptimize.cpp  WindowIPCoptimize.ui
Zdeny_PhD_Shenanigans/Gui/Windows/IPCparameters/: WindowIPCparameters.cpp  WindowIPCparameters.ui
Zdeny_PhD_Shenanigans/Gui/Windows/Plot/: WindowPlot.cpp  WindowPlot.ui
Zdeny_PhD_Shenanigans/Gui/Windows/Template/: WindowTemplate.h
Zdeny_PhD_Shenanigans/IPC/: IPC.cpp  IPC.h  IterativePhaseCorrelation.cpp  IterativePhaseCorrelation.h  ipcAux.cpp  ipcAux.h
Zdeny_PhD_Shenanigans/InverseMap/: inverseMapping.cpp  inverseMapping.h
Zdeny_PhD_Shenanigans/InverseMapping/: inverseMapping.cpp
Zdeny_PhD_Shenanigans/Log/: LogFunction.h  Logger.h  QtLogger.h  SpdLogger.h  logger.cpp  logger.h  loggercsl.h  loggerqt.h
Zdeny_PhD_Shenanigans/Neural/: neural.h
Zdeny_PhD_Shenanigans/Optimization/: Evolution.cpp  Evolution.h  GraphOptimization.cpp  GraphOptimization.h  Optimization.cpp  Optimization.h  OptimizationTestFunctions.h  Optimization_.cpp  PatternSearch.cpp  PatternSearch.h  VisualOptimization.cpp  VisualOptimization.h  graphOptimization.cpp  graphOptimization.h  optimization.cpp  optimization.h
Zdeny_PhD_Shenanigans/Phon/: stmpref.h
Zdeny_PhD_Shenanigans/Plot/: IPlot1D.h  Plot.cpp  Plot.h  Plot1D.cpp  Plot1D.h  Plot1DImpl.h  Plot2D.cpp  Plot2D.h  PlotCSV.cpp  PlotCSV.h  Plotter2D.cpp  plotter.h  plotterqt.h  plotterqt1D.h  plotterqt2D.h  qcustomplot.cpp
Zdeny_PhD_Shenanigans/Procedural/: baseFunctions2d.h  procedural.h  smoothnoise.h
Zdeny_PhD_Shenanigans/QtGui/: WindowDiffrot.ui  WindowIPCoptimize.h  WindowIPCparameters.h  WindowPlot.cpp  WindowPlot.ui  Zdeny_PhD_Shenanigans.cpp  Zdeny_PhD_Shenanigans.ui
Zdeny_PhD_Shenanigans/Resources/: Zdeny_PhD_Shenanigans.qrc  Zdeny_PhD_Shenanigans.rc
Zdeny_PhD_Shenanigans/Resources/Activation_Data/: ReadMe.txt
Zdeny_PhD_Shenanigans/Sasko/: NonMaximaSuppression.h
Zdeny_PhD_Shenanigans/Snake/: game.h  map.cpp  map.h  snake.cpp  snake.h
Zdeny_PhD_Shenanigans/UnitTests/: IterativePhaseCorrelationTest.h  UnitTests.h
Zdeny_PhD_Shenanigans/Utils/: export.h  vectmat.h
apps/: Shenanigans.cpp
script/: fits.py  fits_diffrot_download.py  fits_diffrot_getdata.py  fits_getdata.py  kcachegrind.sh
shenanigans.egg-info/: PKG-INFO  SOURCES.txt
src/: Precompiled.h  Precompiled.hpp  PrecompiledGui.hpp  main.cpp
test/: ColMathTest.cpp  FITSTest.cpp  FourierTest.cpp  IPCTest.cpp  IterativePhaseCOrrelationTest.cpp  IterativePhaseCorrelationTest.cpp  MedianBlurTest.cpp  MedianTest.cpp  PolyfitTest.cpp  TrigfitTest.cpp
tools/: __init__.py
visualizations/: features.m
(+667 files in other folders)
